<resources>
    <string name="app_name">Tzzapp</string>
    <string name="action_settings">Innstillinger</string>
    <string name="forms">Formularer</string>
    <string name="equipment">Utstyrsliste</string>
    <string name="price">Prishjelper</string>
    <string name="title_activity_settings">Innstillinger</string>
    <string name="lang">Språk</string>
    <string name="title_activity_forms">Formularer</string>
    <string name="key_dark_mode">Nattmodus</string>
    <string name="appearance">Utseende</string>
    <string name="placeholder">test</string>
    <string name="lamps">Lamper</string>
    <string name="lampWidth">Bredde</string>
    <string name="lampLength">Lengde</string>
    <string name="roomWidth">Bredde</string>
    <string name="roomLength">Lengde</string>
    <string name="lamp_count">Antall lamper</string>
    <string name="distance_width">Distanse på bredde</string>
    <string name="spaceBetweenLamps">Plass mellom lamper</string>
    <string name="room">Rom</string>
    <string name="size">Størrelse</string>
    <string name="lamp_description">Lampe</string>
    <string name="distance_length">Distanse på lengde</string>
    <string name="calculate_button_text">MATH!</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Avbryt</string>
    <string name="edit_button_label">Rediger</string>
    <string name="close">Lukk</string>
    <string name="save">Lagre</string>
    <string name="prod__id">Produkt id</string>
    <string name="prod_name">Produkt navn</string>
    <string name="delete_item_string">Er du sikker på at du vil slette disse elementene?</string>
    <plurals name="delete_title">
        <item quantity="one">Slette %d element?</item>
        <item quantity="other">Slette %d elementer?</item>
    </plurals>
    <string name="zero_items">Velg noen elementer ved å holde på dem</string>
    <string name="itemCount">Antall :</string>
    <string name="prod_id_short">"Prod ID : "</string>
    <string name="tzzapp_logo">Logoen til Tzzapp</string>
    <string name="product_description">Produkt beskrivelse</string>
    <string name="canceled">Avbrutt</string>
    <string name="count">Antall</string>
    <string name="error_roomY">Rom bredde mangler</string>
    <string name="error_lampY">Lampe bredde mangler</string>
    <string name="error_lampCount">Antal lamper mangler</string>
    <string name="error_roomX">Rom lengde mangler</string>
    <string name="error_lampX">Lampe lengde mangler</string>
    <string name="title_activity_heating">Heating</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="varmekabel">Varmekabel</string>
    <string name="cable_lenght">Kabel lengde</string>
    <string name="area">Areal</string>
    <string name="area_Y">Areal lengde</string>
    <string name="area_X">Areal bredde</string>
    <string name="cc_distance_description">CC avstand</string>
    <string name="meashure_warning_heating">Husk at alle mål er i cm</string>
    <string name="area_missing_error">Mangler et areal</string>
    <string name="cable_missing_error">Mangler kabel lengde</string>
    <string name="room_x_missing_error">Mangler rom bredde</string>
    <string name="room_y_missing_error">Mangler rom vidde</string>


</resources>
