<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Formulas">

        <EditText
            android:id="@+id/editTextWallX"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/roomSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spaceToWall" />

        <EditText
            android:id="@+id/editTextWallY"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/roomSize"
            app:layout_constraintTop_toBottomOf="@+id/spaceToWall" />

        <EditText
            android:id="@+id/editTextLampX"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/roomSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distanceTextView" />

        <TextView
            android:id="@+id/roomTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_margin="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/roomSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/size"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomTittle" />

        <TextView
            android:id="@+id/lampTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/lamp_description"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRoomLength" />

        <TextView
            android:id="@+id/lampSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/size"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lampTittle" />

        <EditText
            android:id="@+id/editTextLampCountLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lamp_count"
            android:inputType="number"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/roomSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextLampLength" />

        <EditText
            android:id="@+id/editTextLampCountWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lamp_count"
            android:inputType="number"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/roomSize"
            app:layout_constraintTop_toBottomOf="@+id/editTextLampWith" />

        <EditText
            android:id="@+id/editTextRoomLength"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/roomLength"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/roomSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomSize" />

        <EditText
            android:id="@+id/editTextRoomWith"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/roomWidth"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/roomSize"
            app:layout_constraintTop_toBottomOf="@+id/roomSize" />

        <EditText
            android:id="@+id/editTextLampLength"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/lampLength"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/roomSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lampSize" />

        <EditText
            android:id="@+id/editTextLampWith"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/lampWidth"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/roomSize"
            app:layout_constraintTop_toBottomOf="@+id/lampSize" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/editTextLampY"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/roomSize"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/distance_length"
            app:layout_constraintEnd_toEndOf="@+id/roomSize"
            app:layout_constraintHorizontal_bias="0.539"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spaceBetweenLamps" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="122dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/distance_width"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/roomSize"
            app:layout_constraintTop_toBottomOf="@+id/spaceBetweenLamps" />

        <TextView
            android:id="@+id/spaceBetweenLamps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/spaceBetweenLamps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextLampCountLength" />

        <TextView
            android:id="@+id/spaceToWall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Plass mellom lampe og vegg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextLampX" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>